# servomexlib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: design.md  devices.md  hardware-test-day.md  index.md  installation.md  protocol.md  quickstart-async.md  quickstart-sync.md  safety.md  streaming.md  testing.md  troubleshooting.md
docs/api/: devices.md  errors.md  index.md  manager.md  protocol.md  registry.md  servomexlib.md  sinks.md  streaming.md  sync.md  testing.md  transport.md
examples/: capture_to_sqlite.py
src/servomexlib/: __init__.py  _logging.py  errors.py  manager.py  testing.py  version.py
src/servomexlib/cli/: __init__.py  _common.py  capture.py  decode.py  discover.py  read.py  stream.py
src/servomexlib/cli/diagnostics/: __init__.py  _gate.py  jitter.py  loopback.py  tap.py
src/servomexlib/devices/: __init__.py  analyzer.py  capability.py  discovery.py  factory.py  models.py  session.py
src/servomexlib/protocol/: __init__.py  base.py  detect.py
src/servomexlib/protocol/continuous/: __init__.py  checksum.py  client.py  parser.py
src/servomexlib/protocol/modbus/: __init__.py  client.py  errors.py  read_plan.py  registers.py  session.py
src/servomexlib/registry/: __init__.py  channels.py  charset.py  status.py  units.py
src/servomexlib/sinks/: __init__.py  _schema.py  base.py  csv.py  jsonl.py  memory.py  parquet.py  postgres.py  sqlite.py
src/servomexlib/streaming/: __init__.py  poll_source.py  recorder.py  sample.py  stream_session.py
src/servomexlib/sync/: __init__.py  analyzer.py  manager.py  portal.py  recording.py  sinks.py
src/servomexlib/transport/: __init__.py  base.py  fake.py  serial.py
tests/: conftest.py
tests/hardware/: conftest.py  test_hardware_reads.py  test_hardware_stateful.py
tests/unit/: test_calibration.py  test_charset.py  test_cli.py  test_cli_decode.py  test_continuous_checksum.py  test_continuous_client.py  test_continuous_parser.py  test_detect_and_discovery.py  test_errors.py  test_factory_and_gates.py  test_manager.py  test_modbus_client.py  test_modbus_codec.py  test_modbus_errors.py  test_modbus_read_plan.py  test_modbus_registers.py  test_models.py  test_package_imports.py  test_recorder.py  test_registry_channels.py  test_registry_status.py  test_sinks.py  test_sync_facade.py  test_sync_wrappers.py  test_transport_fake.py  test_units.py
