[build-system]
requires = ["hatchling>=1.30.1", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "servomexlib"
dynamic = ["version"]
description = "Async Python driver for Servomex SERVOPRO 4000-series gas analysers (continuous-ASCII + Modbus RTU/ASCII)."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Grayson Bellamy", email = "gbellamy@umd.edu" }]
keywords = ["servomex", "gas analyser", "oxygen", "modbus", "serial", "continuous", "instrument"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AnyIO",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.14",
    "anyserial>=0.1.2,<0.2",
]

[project.optional-dependencies]
# Modbus is staged so continuous-only users stay lean (design §5.1, §11).
#   modbus       → RTU + continuous core (interim read_input_registers/decode_* path)
#   modbus-ascii → AUTO ladder, ASCII/LRC framing, FC08 diagnostics, typed FC04 helpers
modbus = ["anymodbus>=0.1.1"]
modbus-ascii = ["anymodbus>=0.2,<0.3"]
postgres = ["asyncpg>=0.30"]
parquet = ["pyarrow>=16"]
docs = [
    "zensical>=0.0.45",
    "mkdocstrings-python>=2.0.4",
]

[project.scripts]
servomex-read = "servomexlib.cli.read:main"
servomex-stream = "servomexlib.cli.stream:main"
servomex-discover = "servomexlib.cli.discover:main"
servomex-decode = "servomexlib.cli.decode:main"
servomex-capture = "servomexlib.cli.capture:main"
servomex-diag = "servomexlib.cli.diagnostics:main"

[project.urls]
Homepage = "https://github.com/GraysonBellamy/servomexlib"
Repository = "https://github.com/GraysonBellamy/servomexlib"
Documentation = "https://graysonbellamy.github.io/servomexlib/"
Issues = "https://github.com/GraysonBellamy/servomexlib/issues"
Changelog = "https://github.com/GraysonBellamy/servomexlib/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/servomexlib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/servomexlib"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

# ---------------------------------------------------------------------------
# uv — dependency groups (PEP 735)
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "docs" },
    "pre-commit>=4.0",
]
lint = [
    "ruff>=0.15.17",
]
type = [
    "mypy>=1.20",
    "pyright>=1.1.410",
]
test = [
    "pytest>=9.1.0",
    # AnyIO ships its own pytest plugin; pytest-asyncio would conflict with it
    # (the two auto-modes disagree, and pytest-asyncio wraps fixtures in fresh
    # tasks that break cancel scopes / task groups). See AnyIO testing docs.
    "pytest-cov>=6.0",
    "coverage[toml]>=7.14.2",
    "hypothesis>=6.155.2",
    "trio>=0.27",       # used as a secondary AnyIO backend in cross-backend tests
    "uvloop>=0.22.1; platform_system == 'Linux' or platform_system == 'Darwin'",
    # Modbus engine — needed to exercise the Modbus path + MockSlave fake in CI.
    "anymodbus>=0.2,<0.3",
]
docs = [
    "zensical>=0.0.45",
    "mkdocstrings-python>=2.0.4",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# Generated by hatch-vcs.
extend-exclude = [
    "src/servomexlib/_version.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async (general async lints; wait_for ban is enforced via TID251 below)
    "PL",   # pylint
    "PT",   # pytest-style
    "RUF",  # ruff-specific
    "D",    # pydocstyle (Google)
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print (no print in library)
    "TID",  # flake8-tidy-imports
    "TC",   # flake8-type-checking (was TCH)
    "PTH",  # flake8-use-pathlib
    "ANN",  # flake8-annotations
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "A",    # flake8-builtins
]
ignore = [
    "D100",    # missing module docstring — tolerated for now on stubs
    "D104",    # missing docstring in public package
    "D105",    # magic method docstrings — __str__ / __repr__ rarely need docs
    "D107",    # __init__ docstrings — class docstring covers it
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
    "PLR0913", # too many args — common for device methods
    "RUF002",  # ambiguous unicode in docstrings — en/em dashes are fine
    "RUF003",  # ambiguous unicode in comments
    "ANN401",  # Any in annotations — sometimes legitimate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S101", "PLR2004", "PLC0415", "S", "ASYNC109", "SIM117"]
"examples/**" = ["D", "T20", "S101", "PLR2004", "INP001"]
"scripts/**" = ["D", "T20", "S101", "PLR2004", "INP001", "ANN", "ASYNC109"]
# Transport, protocol client, session, factory, discovery, and manager expose
# a per-call ``timeout`` at every I/O boundary (design §4.1, §7). ASYNC109
# discourages that in favor of ``anyio.fail_after`` *around* the call, but the
# design goal is to surface per-call bounds through the Protocol so
# implementations can't elide them.
"src/servomexlib/transport/**" = ["ASYNC109", "D102"]
# Protocol clients expose the same per-call timeout (ASYNC109); the structural
# Protocol stubs in base.py carry class-level docs, not per-method (D102).
"src/servomexlib/protocol/**" = ["ASYNC109", "D102"]
# The testing seam imports the optional [modbus] stack lazily so that
# ``servomexlib.testing`` stays importable without the extra (design §5.2, §11).
"src/servomexlib/testing.py" = ["PLC0415"]
# factory/discovery/detect lazy-import the optional [modbus] stack (and break an
# Analyzer↔factory import cycle), so their imports live inside functions (PLC0415).
"src/servomexlib/devices/session.py" = ["ASYNC109"]
"src/servomexlib/devices/factory.py" = ["ASYNC109", "PLC0415"]
"src/servomexlib/devices/discovery.py" = ["ASYNC109", "PLC0415"]
"src/servomexlib/protocol/detect.py" = ["ASYNC109", "PLC0415"]
"src/servomexlib/devices/analyzer.py" = ["ASYNC109"]
"src/servomexlib/manager.py" = ["ASYNC109"]
# The recorder + PollSource thread a per-tick ``timeout`` through to the source's
# I/O boundary (design §4.2, §7), same rationale as the protocol clients.
"src/servomexlib/streaming/**" = ["ASYNC109"]
# The sync facade mirrors the async API method-for-method, including the per-call
# ``timeout`` surface (ASYNC109).
"src/servomexlib/sync/**" = ["ASYNC109"]
# CLI entry points accept --timeout for the same per-call I/O bounds (ASYNC109)
# and do one-shot fixture reads / output writes with pathlib inside their async
# bodies (ASYNC240); both are fine for a short-lived command.
"src/servomexlib/cli/**" = ["ASYNC109", "ASYNC240"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# asyncio.wait_for has cancel-leak corner cases and is superseded by
# asyncio.timeout() / anyio.fail_after.
"asyncio.wait_for".msg = "Use anyio.fail_after / anyio.move_on_after instead."

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88

# ---------------------------------------------------------------------------
# mypy — strict
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true
show_error_codes = true
show_column_numbers = true
pretty = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "unused-awaitable",
    "possibly-undefined",
]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = ["src", "tests"]
exclude = ["src/servomexlib/_version\\.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# pyarrow is an optional extra and ships no py.typed marker as of 16.x.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"

# asyncpg is an optional extra.
[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
follow_imports = "skip"

# ---------------------------------------------------------------------------
# Pyright — secondary type checker
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src", "tests"]
exclude = ["src/servomexlib/_version.py", "**/__pycache__"]
# Project root on the search path so ``tests`` resolves as a namespace package
# (tests import shared fixtures via ``from tests.conftest import ...``).
extraPaths = ["."]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"

# Tests legitimately inspect internals (shared locks, port groups, bound sinks),
# mirroring the mypy ``tests.*`` relaxation, so private-member access is allowed
# there.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[[tool.pyright.executionEnvironments]]
root = "src"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# No asyncio_mode: we use AnyIO's pytest plugin instead of pytest-asyncio.
# Async tests mark with @pytest.mark.anyio; cross-backend coverage comes from
# the parametrised anyio_backend fixture in tests/conftest.py.
xfail_strict = true
markers = [
    "hardware: requires a connected Servomex analyser (read-only)",
    "hardware_stateful: changes device state (autocalibration start/stop) — opt in via SERVOMEXLIB_ENABLE_STATEFUL_TESTS=1",
    "hardware_destructive: destructive ops (baud/address change, protocol switch) — opt in via SERVOMEXLIB_ENABLE_DESTRUCTIVE_TESTS=1",
    "slow: excluded from the fast CI run",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "-m",
    "not hardware and not hardware_stateful and not hardware_destructive",
]
filterwarnings = [
    "error",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source_pkgs = ["servomexlib"]
branch = true
parallel = true
omit = [
    "src/servomexlib/_version.py",
]

[tool.coverage.paths]
servomexlib = ["src/servomexlib", "*/site-packages/servomexlib"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@overload",
    "@abstractmethod",
    "\\.\\.\\.",
]
